fine tune bootstrap dark mode issues

--- a/alternative/findyourasp/find-your-language/ClientApp/src/components/NavMenu.css
+++ b/alternative/findyourasp/find-your-language/ClientApp/src/components/NavMenu.css
@@ -16,3 +16,14 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
+body.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+body.dark-mode {
+  background-color: #1a1919;
+  color: #999;
+}
