--- a/alternative/findyourasp/find-your-language/ClientApp/src/custom.css
+++ b/alternative/findyourasp/find-your-language/ClientApp/src/custom.css
@@ -13,6 +13,18 @@ code {
   border-color: #1861ac;
 }
 
+header.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+header.dark-modee {
+  background-color: #1a1919;
+  color: #999;
+}
+
+
 body.light-mode {
   background-color: #fff;
   color: #333;
@@ -22,4 +34,29 @@ body.light-mode {
 body.dark-mode {
   background-color: #1a1919;
   color: #999;
+}
+
+[data-theme="dark"] {
+  background-color: #111 !important;
+  color: #eee;
+}
+
+[data-theme="dark"] .card {
+  background-color: #111 !important;
+  color: #eee;
+}
+
+[data-theme="dark"] .navbar-nav {
+  background-color: #111 !important;
+  color: #eee;
+}
+
+[data-theme="dark"] .text {
+  background-color: #111 !important;
+  color: #eee;
+}
+
+[data-theme="dark"] .NavLink {
+  background-color: #111 !important;
+  color: #eee;
 }
